Added summary and team managers. Fixed scrolling issues.